# mokap

./: .env_example  .gitignore  README.md  config.yaml  config.yml  config_example.yaml  edit_videos.py  environment.yml  example_config.conf  generate_videos.py  main.py  makevids.py  mokap.py  old_main.py  pyproject.toml
mokap/: __init__.py  calibration.py  calibration_utils.py  core.py  files_op.py  hardware.py  interface.py  interface_qt.py  interface_temp.py  interface_tk.py  monocular_functions.py  multicam.py  multiview_functions.py  proj_geom.py  qt_opengl.py  utils.py
mokap/calibration/: __calibration.py  __init__.py  bundle_adjustment.py  bundle_adjustment_2.py  common.py  detectors.py  monocular.py  monocular_2.py  multiview.py
mokap/core/: __core.py  __init__.py  _core.py  hardware.py  manager.py  writers.py
mokap/core/cameras/: __init__.py  basler.py  camerafactory.py  flir.py  genicam.py  interface.py  webcam.py
mokap/gui/: __init__.py  __layout_constants.py  _widgets.py  components.py  workers.py
mokap/reconstruction/: reconstructor.py  reconstructor_debug.py
mokap/some_tests/: ffmpeg_testbench.py  framerate_test.py  io_test.py
mokap/utils/: __utils.py  _utils.py  datatypes.py  fileio.py  geometry.py  geometry_2.py  geometry_jax.py  jax_utils.py  outliers_rejection.py  system.py  visualisation.py
some_tests/: detection_test.py  ffmpeg_testbench.py  framerate_test.py  io_test.py  other_things.py  qt_test.py  test_flir.py  tiangulation_test.py
to_be_deleted/: bundle_adjustment.py  geometry.py  monocular.py  multiview.py
(+37 files in other folders)
